<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/main_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10.0dip"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/main_help_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_help"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/website"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/website"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/emthy_line" />
    </LinearLayout>

</ScrollView>